--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -5,12 +5,12 @@
 body {
     font-family: "Nunito", Helvitica, sans-serif !important;
 }
-.rooms {
-    width: 1000px;
-    margin: 0 auto;
-    text-align: center;
-    position: relative;
-}
+/*.rooms {*/
+    /*width: 1000px;*/
+    /*margin: 0 auto;*/
+    /*text-align: center;*/
+    /*position: relative;*/
+/*}*/
 
 .yroom {
     background-color: #C7FE74;
@@ -51,10 +51,10 @@ body {
     display: inline-block;
     padding-top: 0px;
 }
-.row{
-    display: inherit !important;
-    margin: 0px !important;
-}
+/*.row{*/
+    /*display: inherit !important;*/
+    /*margin: 0px !important;*/
+/*}*/
 .btn-xl {
     padding: 18px 28px;
     font-size: 100px;
